# SkillSprints

./: .gitignore  .placeholder  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: db.py  main.py  settings.py
backend/app/api/v1/: auth.py  courses.py  feeds.py  live.py  quiz.py  tutor.py
backend/app/core/security/: jwt_auth_middleware.py  password.py
backend/app/models/: __init__.py  course.py  role.py  user.py
backend/app/services/: llm.py  rag_service.py
backend/tests/: test_auth.py
docs/: architecture.md  contributing.md  deployment.md  er_diagram.md  getting_started.md
docs/skillsprint_enterprise/: 01_Product_Requirements_Document.md  02_System_Architecture.md  03_Database_Schema.md  04_API_Specifications.md  05_Frontend_Architecture.md  06_Backend_Architecture.md  07_Folder_Structure.md  08_UI_Wireframes.md  09_Component_Breakdown.md  10_State_Management_Design.md  11_Notification_Architecture.md  12_WebView_Architecture.md  13_AI_Tutor_Architecture.md  14_Recommendation_Engine.md  15_Security_Architecture.md  16_Deployment_Architecture.md  17_Testing_Strategy.md  18_Development_Roadmap.md  19_Sprint_Planning.md  20_Production_Launch_Checklist.md
frontend/: .env.example  .gitignore  app.json  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/__tests__/: LoginScreen.test.tsx
frontend/src/app/: _layout.tsx  tutor.tsx
frontend/src/auth/: ClerkAuthScreen.tsx
frontend/src/components/: FeedItem.tsx  (+4 more)
infra/: main.tf  outputs.tf  variables.tf
(+26 files in other folders)
