[project]
name = "skillsprint-backend"
version = "0.1.0"
description = "FastAPI backend for AI-powered micro-learning platform"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.2",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.4",
    "celery>=5.4.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "slowapi>=0.1.9",
    "langchain>=0.1.20",
    "pgvector>=0.2.5",
    "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "black>=24.3.0",
    "isort>=5.13.2",
    "mypy>=1.9.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
